--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -8,6 +8,8 @@ clean  :; forge clean
 
 remove :; rm -rf .gitmodules && rm -rf .git/modules/* && rm -rf lib && touch .gitmodules && git add . && git commit -m "modules"
 
+install :; forge install foundry-rs/forge-std
+
 update:; forge update
 
 build:; forge build
