--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -24,3 +24,6 @@ deploy:
 	@forge script script/DeployWallet.s.sol:DeployWallet $(NETWORK_ARGS)
 
 NETWORK_ARGS := --rpc-url http://localhost:8545 --private-key $(DEFAULT_ANVIL_KEY) --broadcast
+
+deploy-sepolia:
+	@forge script script/DeployWallet.s.sol:DeployWallet --rpc-url $(SEPOLIA_RPC_URL) --private-key $(PRIVATE_KEY) --broadcast --verify --etherscan-api-key $(ETHERSCAN_API_KEY) -vvvv
